--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-fileupload": "^1.0.0",
     "formidable": "^1.2.1",
+    "mongodb": "^3.1.10",
     "mongoose": "^5.3.11",
     "multer": "^1.4.1",
     "multer-storage-cloudinary": "^2.2.1",
